Closes #162 - Fix some SonarCloud issues in Backend